--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -7,9 +7,21 @@
 .opacity {
   opacity: 0; }
 
-.header, .main_sect .main_sect_container {
+.orange_tittle, .scroll_down, .join_us, .learn_m, .main_nav, .header, .main_sect .main_sect_container, .sect_two .sect_two_container .sect_two_hex_4 .hex_4_text {
   font-family: 'Uni Sans Heavy Caps', sans-serif;
   font-weight: 900; }
+
+.header .head_select {
+  font-family: 'Uni Sans', sana-serif;
+  font-weight: 400; }
+
+.sect_two .sect_two_container .sect_two_hex_2 .hex_2_text {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400; }
+
+.sect_two .sect_two_container .sect_two_hex_1 .hex_1_text {
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 400; }
 
 html {
   font-size: 16px; }
@@ -22,6 +34,119 @@ a {
   color: #ffffff; }
   a:hover {
     color: #f3a10d; }
+
+.orange_tittle {
+  font-size: 1.500em;
+  color: #f3a10d; }
+
+.scroll_down {
+  color: #ffffff;
+  position: absolute;
+  font-size: 0.875em;
+  bottom: -5px;
+  left: 47%; }
+  .scroll_down p {
+    text-align: center; }
+
+.join_us {
+  position: absolute;
+  bottom: 4%;
+  right: 8%; }
+
+.info_btn {
+  width: 146px;
+  height: 125px;
+  margin: 10px 79px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 10;
+  position: absolute;
+  overflow: visible;
+  background: url(../../img/hex.png) 16px -2px no-repeat; }
+
+.learn_m {
+  font-size: 0.875em; }
+  .learn_m:hover, .learn_m:active {
+    text-decoration: none;
+    color: #ffffff; }
+
+.hexagon {
+  position: relative;
+  width: 432px;
+  height: 249.42px;
+  background-color: #000000ab;
+  margin: 115.47px 0; }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .hexagon {
+      width: 325px;
+      height: 187.75px; } }
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 216px solid transparent;
+  border-right: 216px solid transparent;
+  margin-left: -50%; }
+  @media (min-width: 576px) and (max-width: 767px) {
+    .hexagon:before,
+    .hexagon:after {
+      border-left: 162px solid transparent;
+      border-right: 162px solid transparent; } }
+
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 115.47px solid #000000ab; }
+
+.hexagon:after {
+  top: 100%;
+  margin-left: -50%;
+  border-top: 115.47px solid #000000ab; }
+
+.main_nav {
+  position: absolute;
+  top: 39%;
+  right: 8%; }
+  .main_nav .main_nav_list {
+    list-style: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end; }
+    .main_nav .main_nav_list .main_nav_item a {
+      text-decoration: none;
+      color: rgba(0, 0, 0, 0); }
+      .main_nav .main_nav_list .main_nav_item a:hover, .main_nav .main_nav_list .main_nav_item a:active {
+        color: #ffffff; }
+    .main_nav .main_nav_list .main_nav_item .main_nav_href {
+      padding-right: 20px; }
+    .main_nav .main_nav_list .main_nav_item .main_nav_item_icon {
+      display: inline-block;
+      width: 21px;
+      height: 23px;
+      background: url(../../img/main_nav.png) 0px 25px; }
+      .main_nav .main_nav_list .main_nav_item .main_nav_item_icon:hover {
+        background: url(../../img/main_nav.png) 0px 0px; }
 
 @font-face {
   font-family: 'Roboto';
@@ -46,6 +171,12 @@ a {
   font-style: normal;
   font-stretch: normal;
   unicode-range: U+0020-00BB; }
+
+@font-face {
+  font-family: 'Uni Sans';
+  src: url("../../fonts/UniSansSemiBold.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
 
 @font-face {
   font-family: 'PT Sans';
@@ -106,29 +237,7 @@ a {
     -webkit-box-align: center;
     -webkit-align-items: center;
         -ms-flex-align: center;
-            align-items: center;
-    /*
-		.nav_item:before{
-			content: "";
-			opacity: 0;
-			top: -48px;
-    		left: -10px;	
-			position: absolute;
-			width: 200px;
-			height: 200px;
-			background: url("../../img/hex2.png") no-repeat;
-		}
-		.nav_item:after{
-			content: "";
-			opacity: 0;
-			top: -36px;
-    		left: 2px;
-			position: absolute;
-			width: 200px;
-			height: 200px;
-			background: url("../../img/hex3.png") no-repeat;
-		}
-*/ }
+            align-items: center; }
     .header .nav .hamburder_icon {
       position: absolute; }
     .header .nav .nav_item {
@@ -156,6 +265,7 @@ a {
       .header .nav .nav_item:hover {
         color: #f3a10d; }
   .header .head_select {
+    text-transform: uppercase;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -190,7 +300,7 @@ a {
     position: relative;
     color: #ffffff; }
     .main_sect .main_sect_container .ball_con {
-      margin-top: 101px;
+      margin-top: 105px;
       background: transparent;
       display: -webkit-box;
       display: -webkit-flex;
@@ -216,43 +326,13 @@ a {
         margin-bottom: -229px;
         margin-left: -2px; }
     .main_sect .main_sect_container .main_tittle {
-      margin-top: 160px;
+      margin-top: 156px;
+      margin-left: 76px;
       font-size: 1.612em; }
-    .main_sect .main_sect_container .hexagon {
-      margin-top: 115px;
-      position: relative;
-      width: 432px;
-      height: 249.42px;
-      background-color: #000000ab;
-      margin: 115.47px 0; }
-      @media (min-width: 576px) and (max-width: 767px) {
-        .main_sect .main_sect_container .hexagon {
-          width: 325px;
-          height: 187.75px; } }
-    .main_sect .main_sect_container .hexagon:before,
-    .main_sect .main_sect_container .hexagon:after {
-      content: "";
-      position: absolute;
-      width: 0;
-      border-left: 216px solid transparent;
-      border-right: 216px solid transparent;
-      margin-left: -50%; }
-      @media (min-width: 576px) and (max-width: 767px) {
-        .main_sect .main_sect_container .hexagon:before,
-        .main_sect .main_sect_container .hexagon:after {
-          border-left: 162px solid transparent;
-          border-right: 162px solid transparent; } }
-    .main_sect .main_sect_container .hexagon:before {
-      bottom: 100%;
-      border-bottom: 115.47px solid #000000ab; }
-    .main_sect .main_sect_container .hexagon:after {
-      top: 100%;
-      margin-left: -50%;
-      border-top: 115.47px solid #000000ab; }
     .main_sect .main_sect_container .info_about {
-      margin-left: 105px;
-      margin-bottom: 146px;
-      margin-top: 172px;
+      margin-left: 93px;
+      margin-bottom: 188px;
+      margin-top: 108px;
       padding-left: 66px;
       padding-right: 66px;
       font-size: 0.875em;
@@ -260,74 +340,15 @@ a {
       background-color: #000000ab; }
       .main_sect .main_sect_container .info_about .info_tittle {
         margin-bottom: 45px;
-        font-size: 1.875em; }
-    .main_sect .main_sect_container .info_btn {
-      width: 146px;
-      height: 125px;
-      margin: 29px 79px;
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-          -ms-flex-align: center;
-              align-items: center;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      z-index: 10;
-      position: absolute;
-      overflow: visible;
-      background: url(../../img/hex.png) 16px -2px no-repeat; }
-    .main_sect .main_sect_container .learn_m:hover, .main_sect .main_sect_container .learn_m:active {
-      text-decoration: none;
-      color: #ffffff; }
-    .main_sect .main_sect_container .scroll_down {
-      position: absolute;
-      font-size: 0.875em;
-      bottom: -5px;
-      left: 47%; }
-      .main_sect .main_sect_container .scroll_down p {
-        text-align: center; }
-    .main_sect .main_sect_container .main_nav {
-      position: absolute;
-      top: 44%;
-      right: 10px; }
-      .main_sect .main_sect_container .main_nav .main_nav_list {
-        list-style: none;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-align: end;
-        -webkit-align-items: flex-end;
-            -ms-flex-align: end;
-                align-items: flex-end; }
-        .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item a {
-          text-decoration: none;
-          color: rgba(0, 0, 0, 0); }
-          .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item a:hover, .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item a:active {
-            color: #ffffff; }
-        .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item .main_nav_href {
-          padding-right: 20px; }
-        .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item .main_nav_item_icon {
-          display: inline-block;
-          width: 21px;
-          height: 23px;
-          background: url(../../img/main_nav.png) 0px 25px; }
-          .main_sect .main_sect_container .main_nav .main_nav_list .main_nav_item .main_nav_item_icon:hover {
-            background: url(../../img/main_nav.png) 0px 0px; }
-    .main_sect .main_sect_container .join_us {
-      position: absolute;
-      bottom: 10px;
-      right: 0; }
+        font-size: 1.875em;
+        -webkit-animation-delay: 10s;
+                animation-delay: 10s; }
+      .main_sect .main_sect_container .info_about .info_about_text {
+        height: 140px;
+        overflow-x: hidden;
+        overflow-y: scroll; }
+      .main_sect .main_sect_container .info_about .info_about_text::-webkit-scrollbar {
+        width: 0px; }
 
 @-webkit-keyframes animatedBackground {
   0 {
@@ -412,9 +433,9 @@ a {
 
 #fly_car {
   position: absolute;
-  -webkit-transform: translate(-5%, 58%);
-      -ms-transform: translate(-5%, 58%);
-          transform: translate(-5%, 58%); }
+  -webkit-transform: translate(-7%, 63%);
+      -ms-transform: translate(-7%, 63%);
+          transform: translate(-7%, 63%); }
 
 .ball_1 {
   -webkit-animation: Ball 2s linear forwards infinite;
@@ -452,8 +473,9 @@ a {
 
 #earth_1_img {
   width: 100%;
-  -webkit-animation: animatedBackground 13.0s linear forwards;
-          animation: animatedBackground 13.0s linear forwards; }
+  top: -10%;
+  -webkit-animation: animatedBackground 7.0s linear forwards;
+          animation: animatedBackground 7.0s linear forwards; }
 
 .earth_1 {
   position: absolute;
@@ -462,4 +484,50 @@ a {
 .sect_two {
   background-image: url("../../img/sect_two_bg.jpg");
   -webkit-background-size: cover;
-          background-size: cover; }
+          background-size: cover;
+  color: #ffffff;
+  overflow: hidden; }
+  .sect_two .sect_two_container {
+    position: relative; }
+    .sect_two .sect_two_container .hexagon:before, .sect_two .sect_two_container .hexagon:after {
+      margin-left: 0%; }
+    .sect_two .sect_two_container .hexagon .info_btn {
+      margin: 10% 34%; }
+    .sect_two .sect_two_container .sect_two_hex_1 {
+      margin-top: 8%;
+      margin-left: 35px; }
+      .sect_two .sect_two_container .sect_two_hex_1 h3 {
+        margin-bottom: 36px; }
+      .sect_two .sect_two_container .sect_two_hex_1 .hex_1_text {
+        font-size: 1em; }
+      .sect_two .sect_two_container .sect_two_hex_1 .info_btn {
+        margin: 5% 34%; }
+    .sect_two .sect_two_container .sect_two_hex_2 {
+      margin-top: 20%;
+      margin-left: 93px; }
+      .sect_two .sect_two_container .sect_two_hex_2 h3 {
+        margin-bottom: 57px; }
+      .sect_two .sect_two_container .sect_two_hex_2 .hex_2_text {
+        position: relative;
+        font-size: 1em; }
+    .sect_two .sect_two_container .watch_video {
+      -webkit-transform: translate(106%, -4%);
+          -ms-transform: translate(106%, -4%);
+              transform: translate(106%, -4%); }
+      .sect_two .sect_two_container .watch_video .video_btn {
+        margin: -170px 124px; }
+    .sect_two .sect_two_container .sect_two_hex_4 {
+      -webkit-transform: translate(71%, -48%);
+          -ms-transform: translate(71%, -48%);
+              transform: translate(71%, -48%); }
+      .sect_two .sect_two_container .sect_two_hex_4 h3 {
+        margin-bottom: 41px; }
+      .sect_two .sect_two_container .sect_two_hex_4 .hex_4_text {
+        font-size: 0.875em; }
+      .sect_two .sect_two_container .sect_two_hex_4 .info_btn {
+        margin: 0% 34%; }
+    .sect_two .sect_two_container .sect_two_info {
+      margin-top: -5px;
+      padding-left: 66px;
+      padding-right: 66px;
+      text-align: center; }
