--- a/app/style/scss/_sect_two.scss
+++ b/app/style/scss/_sect_two.scss
@@ -1,5 +1,71 @@
 .sect_two{
 	background-image: url("../../img/sect_two_bg.jpg");
 	background-size: cover;
+	color: $white;
+	overflow: hidden;
+	.sect_two_container{
+		position: relative;
+		.hexagon{
+			&:before, &:after{
+				margin-left: 0%;
+			}
+			.info_btn{
+				margin: 10% 34%;
+			}
+		}
+		.sect_two_hex_1{
+			margin-top: 8%;
+			margin-left: 35px;
+			h3{
+				margin-bottom: 36px;
+			}
+			.hex_1_text{
+				@extend %PTSansText;
+				font-size: 1em;
+			}
+			.info_btn{
+				margin: 5% 34%;
+			}
+		}
+		.sect_two_hex_2{
+			margin-top: 20%;
+			margin-left: 93px;
+			h3{
+				margin-bottom: 57px;
+			}
+			.hex_2_text{
+				position: relative;
+				@extend %RobotoText;
+				font-size: 1em;
+				
+			}
+		}
 
+		.watch_video{
+			transform: translate(106%, -4%);
+			.video_btn{
+				margin: -170px 124px;
+			}
+		}
+
+		.sect_two_hex_4{
+			transform: translate(71%, -48%);
+			h3{
+				margin-bottom: 41px;
+			}
+			.hex_4_text{
+				@extend %USHText;
+				font-size: 0.875em;
+			}
+			.info_btn{
+				margin: 0% 34%;
+			}
+		}
+		.sect_two_info{
+    		margin-top: -5px;
+			@include paddingLR(66px, 66px);
+			text-align: center;
+
+		}
+	}
 }
