--- a/app/style/scss/_animate.scss
+++ b/app/style/scss/_animate.scss
@@ -45,6 +45,8 @@
 
 #balkon{
 	background-image: url("../../img/bg_3.png");
+	background-repeat: no-repeat;
+	background-size: cover;
 	transform: scale(1.04);
 	background-position: center center;
 	animation: balkon 6s linear forwards;
