--- a/app/style/scss/_sect_two.scss
+++ b/app/style/scss/_sect_two.scss
@@ -31,6 +31,7 @@
 			margin-top: 20%;
 			margin-left: 93px;
 			h3{
+				@extend %USHText;
 				margin-bottom: 57px;
 			}
 			.hex_2_text{
@@ -44,21 +45,21 @@
 		.watch_video{
 			transform: translate(106%, -4%);
 			.video_btn{
-				margin: -170px 124px;
+				margin: -176px 114px;
 			}
 		}
 
 		.sect_two_hex_4{
 			transform: translate(71%, -48%);
 			h3{
-				margin-bottom: 41px;
+				 margin-bottom: 34px;	
 			}
 			.hex_4_text{
 				@extend %USHText;
 				font-size: 0.875em;
 			}
 			.info_btn{
-				margin: 0% 34%;
+				margin: -7% 34%;
 			}
 		}
 		.sect_two_info{
@@ -67,5 +68,8 @@
 			text-align: center;
 
 		}
+	}
+	.scroll_down{
+
 	}
 }
