--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -324,6 +324,11 @@ a {
     list-style: none; }
     .main_sect .main_sect_container .ball_con .ball {
       margin-left: 12px; }
+      @media (min-width: 768px) and (max-width: 991px) {
+        .main_sect .main_sect_container .ball_con .ball {
+          -webkit-animation: none;
+                  animation: none;
+          opasity: 0.6; } }
     .main_sect .main_sect_container .ball_con .ball_1 {
       margin-right: 23px;
       margin-left: 57px; }
@@ -450,6 +455,11 @@ a {
   -webkit-transform: translate(-7%, 63%);
       -ms-transform: translate(-7%, 63%);
           transform: translate(-7%, 63%); }
+  @media (min-width: 768px) and (max-width: 991px) {
+    #fly_car {
+      -webkit-transform: translate(-30%, 60%);
+          -ms-transform: translate(-30%, 60%);
+              transform: translate(-30%, 60%); } }
 
 .ball_1 {
   -webkit-animation: Ball 2s linear forwards infinite;
@@ -490,6 +500,9 @@ a {
   top: -10%;
   -webkit-animation: animatedBackground 7.0s linear forwards;
           animation: animatedBackground 7.0s linear forwards; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    #earth_1_img {
+      top: 0; } }
 
 .earth_1 {
   position: absolute;
@@ -535,11 +548,11 @@ a {
           -ms-transform: translate(71%, -48%);
               transform: translate(71%, -48%); }
       .sect_two .sect_two_container .sect_two_hex_4 h3 {
-        margin-bottom: 34px; }
+        margin-bottom: 26px; }
       .sect_two .sect_two_container .sect_two_hex_4 .hex_4_text {
-        font-size: 0.875em; }
+        font-size: 0.86em; }
       .sect_two .sect_two_container .sect_two_hex_4 .info_btn {
-        margin: -7% 34%; }
+        margin: -1% 34%; }
     .sect_two .sect_two_container .sect_two_info {
       margin-top: -5px;
       padding-left: 66px;
