--- a/app/style/css/style.css
+++ b/app/style/css/style.css
@@ -148,6 +148,22 @@ a {
       .main_nav .main_nav_list .main_nav_item .main_nav_item_icon:hover {
         background: url(../../img/main_nav.png) 0px 0px; }
 
+.hex_text {
+  height: 145px;
+  overflow-x: hidden;
+  overflow-y: scroll; }
+
+.hex_text::-webkit-scrollbar {
+  width: 0px; }
+
+#preloader {
+  background: #000000;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  position: fixed;
+  z-index: 100; }
+
 @font-face {
   font-family: 'Roboto';
   src: url("../../fonts/Roboto Bold.woff2") format("woff2"), url("../../fonts/Roboto Bold.woff") format("woff");
@@ -327,8 +343,7 @@ a {
       @media (min-width: 768px) and (max-width: 991px) {
         .main_sect .main_sect_container .ball_con .ball {
           -webkit-animation: none;
-                  animation: none;
-          opasity: 0.6; } }
+                  animation: none; } }
     .main_sect .main_sect_container .ball_con .ball_1 {
       margin-right: 23px;
       margin-left: 57px; }
@@ -496,6 +511,7 @@ a {
           animation-delay: 0.5s; }
 
 #earth_1_img {
+  overflow: hidden;
   width: 100%;
   top: -10%;
   -webkit-animation: animatedBackground 7.0s linear forwards;
@@ -506,7 +522,7 @@ a {
 
 .earth_1 {
   position: absolute;
-  z-index: -1; }
+  z-index: -2; }
 
 .sect_two {
   background-image: url("../../img/sect_two_bg.jpg");
@@ -524,7 +540,7 @@ a {
       margin-top: 8%;
       margin-left: 35px; }
       .sect_two .sect_two_container .sect_two_hex_1 h3 {
-        margin-bottom: 36px; }
+        margin-bottom: 27px; }
       .sect_two .sect_two_container .sect_two_hex_1 .hex_1_text {
         font-size: 1em; }
       .sect_two .sect_two_container .sect_two_hex_1 .info_btn {
@@ -537,6 +553,8 @@ a {
       .sect_two .sect_two_container .sect_two_hex_2 .hex_2_text {
         position: relative;
         font-size: 1em; }
+      .sect_two .sect_two_container .sect_two_hex_2 .info_btn {
+        margin: -3% 34%; }
     .sect_two .sect_two_container .watch_video {
       -webkit-transform: translate(106%, -4%);
           -ms-transform: translate(106%, -4%);
