--- a/app/style/scss/_animate.scss
+++ b/app/style/scss/_animate.scss
@@ -86,6 +86,7 @@
 }
 #earth_1_img{
 
+	overflow: hidden;
 	width:100%;
 	top: -10%;
 	animation: animatedBackground 7.0s linear forwards;
@@ -95,5 +96,5 @@
 }
 .earth_1{
 	position: absolute;
-	z-index: -1;
+	z-index: -2;
 }
