--- a/app/style/scss/_sect_two.scss
+++ b/app/style/scss/_sect_two.scss
@@ -17,7 +17,7 @@
 			margin-top: 8%;
 			margin-left: 35px;
 			h3{
-				margin-bottom: 36px;
+				margin-bottom: 27px;
 			}
 			.hex_1_text{
 				@extend %PTSansText;
@@ -39,6 +39,9 @@
 				@extend %RobotoText;
 				font-size: 1em;
 				
+			}
+			.info_btn{
+				margin: -3% 34%;
 			}
 		}
 
@@ -66,7 +69,6 @@
     		margin-top: -5px;
 			@include paddingLR(66px, 66px);
 			text-align: center;
-
 		}
 	}
 	.scroll_down{
