--- a/app/style/scss/_variabless.scss
+++ b/app/style/scss/_variabless.scss
@@ -237,3 +237,17 @@ a{
 			}			
 	}
 }
+.hex_text{
+	height: 145px;
+	overflow-x: hidden;
+    overflow-y: scroll;
+}
+.hex_text::-webkit-scrollbar {width:0px;}
+#preloader{
+	background: $black;
+	width: 100vw;
+	height: 100vh;
+	top: 0;
+	position: fixed;
+	z-index: 100;
+}
