--- a/app/style/scss/_main.scss
+++ b/app/style/scss/_main.scss
@@ -8,6 +8,7 @@
 			justify-content: space-between;
 		}
 	}
+
 	.logo_container{
 		@include marginTB(36px, 41px);
 	}
@@ -51,6 +52,9 @@
 			}
 		}
 	}
+.header_kost{
+	height: 100px;
+}
 	.head_select{
 		text-transform: uppercase;
 		width: 40px;;
@@ -105,7 +109,7 @@
 				margin-left: 12px;
 				@include md{
 					animation: none;
-					
+
 				}
 			}
 			.ball_1{
@@ -128,6 +132,7 @@
 			}
 
 		}
+
 		position: relative;
 		@extend %USHText;
 		color: $white;
